@startuml


package NearestNeighbour
{

class GameSystem

package Neighbours
{
class NeighbourManager
}

package Player
{
class PlayerManager
}

package Pooling
{
class PoolingManager
}

package UI
{
class UIManager
}

GameSystem --> NeighbourManager
GameSystem --> PlayerManager
GameSystem --> PoolingManager
GameSystem --> UIManager

note "Only the system can cross namespace boundaries" as System

interface IPoolingService

PoolingManager ..|> IPoolingService
NeighbourManager ..> IPoolingService
PlayerManager ..> IPoolingService

note "Dependencies of multiple managers go in the root namespace" as Service

IPoolingService . Service
}

@enduml
